--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "@blueprintjs/core": "^3.23.0",
@@ -195,6 +196,11 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "no-unused-expressions": "off",
+      "no-restricted-globals": "off",
+      "@typescript-eslint/no-unused-expressions": "off"
+    }
   }
 }
