--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   ],
   "main": "src/index.tsx",
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint": "tsc --noEmit"
   },
