--- a/package.json
+++ b/package.json
@@ -89,11 +89,11 @@
     "@types/file-saver": "^2.0.1",
     "@types/lodash": "4.14.149",
     "@types/mathjs": "^6.0.2",
-    "@types/node": "^12.12.21",
+    "@types/node": "^20.19.25",
     "@types/object-hash": "^1.3.1",
-    "@types/react": "16.8.8",
+    "@types/react": "^17.0.90",
     "@types/react-color": "^3.0.1",
-    "@types/react-dom": "16.8.2",
+    "@types/react-dom": "^17.0.26",
     "@types/react-select": "^4.0.12",
     "@types/react-splitter-layout": "3.0.0",
     "@types/recharts": "^1.8.5",
@@ -135,7 +135,7 @@
     "resolve": "1.8.1",
     "style-loader": "^1.0.2",
     "terser-webpack-plugin": "1.1.0",
-    "typescript": "4.1.3",
+    "typescript": "^5.3.3",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
     "webpack-cli": "^3.3.10",
