--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   ],
   "main": "src/index.tsx",
   "scripts": {
-    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/start.js",
-    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider node scripts/build.js",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "lint": "tsc --noEmit"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@blueprintjs/core": "^3.23.0",
     "@blueprintjs/icons": "^3.13.0",
     "@blueprintjs/popover2": "^0.1.1",
@@ -50,6 +51,7 @@
     "complex": "^3.0.1",
     "d3": "6",
     "dxf-parser": "^1.0.0-alpha.2",
+    "es-abstract": "^1.24.0",
     "fast-fuzzy": "^1.9.1",
     "fast-sort": "^2.0.1",
     "file-saver": "^2.0.2",
@@ -59,13 +61,13 @@
     "normalize.css": "^8.0.1",
     "object-hash": "^2.0.1",
     "plotly.js": "^1.52.2",
-    "react": "16.8.4",
+    "react": "^16.8.4",
     "react-app-polyfill": "^0.2.0",
     "react-autosuggest": "^9.4.3",
     "react-charts": "^2.0.0-beta.6",
     "react-color": "^2.18.0",
-    "react-dev-utils": "^7.0.1",
-    "react-dom": "16.8.4",
+    "react-dev-utils": "^12.0.1",
+    "react-dom": "^16.8.4",
     "react-plotly.js": "^2.4.0",
     "react-select": "^3.0.8",
     "react-splitter-layout": "4.0.0",
@@ -79,21 +81,23 @@
     "three.meshline": "^1.3.0",
     "uplot": "^1.0.8",
     "uuidv4": "6.0.0",
-    "worker-loader": "^3.0.8",
     "zustand": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.1.6",
+    "@babel/core": "^7.28.5",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@types/chroma-js": "^2.0.0",
     "@types/file-saver": "^2.0.1",
     "@types/lodash": "4.14.149",
     "@types/mathjs": "^6.0.2",
     "@types/node": "^20.19.25",
     "@types/object-hash": "^1.3.1",
-    "@types/react": "^17.0.90",
+    "@types/react": "^16.14.68",
     "@types/react-color": "^3.0.1",
-    "@types/react-dom": "^17.0.26",
+    "@types/react-dom": "^16.9.25",
     "@types/react-select": "^4.0.12",
     "@types/react-splitter-layout": "3.0.0",
     "@types/recharts": "^1.8.5",
@@ -102,46 +106,46 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
+    "babel-loader": "^8.4.1",
     "babel-plugin-named-asset-import": "^0.3.0",
     "babel-preset-react-app": "^7.0.0",
     "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chalk": "2.4.1",
-    "css-loader": "^3.4.0",
+    "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.6",
-    "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
-    "file-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.5.3",
     "fs-extra": "7.0.0",
     "glslify-loader": "^2.0.0",
-    "html-webpack-plugin": "4.0.0-alpha.2",
+    "html-webpack-plugin": "^5.6.5",
     "jest": "23.6.0",
-    "mini-css-extract-plugin": "0.4.3",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.1.0",
+    "mini-css-extract-plugin": "^2.9.4",
     "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
+    "postcss-loader": "^7.3.4",
     "postcss-preset-env": "6.3.1",
     "postcss-safe-parser": "4.0.1",
-    "raw-loader": "^4.0.0",
+    "process": "^0.11.10",
+    "raw-loader": "^4.0.2",
+    "react-is": "^19.2.0",
     "resolve": "1.8.1",
-    "style-loader": "^1.0.2",
-    "terser-webpack-plugin": "1.1.0",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.14",
     "typescript": "^5.3.3",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "url": "^0.11.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
+    "webpack-manifest-plugin": "^5.0.0"
   },
   "browserslist": [
     ">0.2%",
