--- a/package.json
+++ b/package.json
@@ -34,20 +34,20 @@
     "@mui/icons-material": "^5.18.0",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.18.0",
-    "@types/d3": "6",
-    "@types/plotly.js": "^1.50.12",
-    "@types/react-tabs": "^2.3.2",
-    "@types/styled-components": "^5.1.7",
+    "@mui/x-tree-view": "^8.19.0",
+    "@types/d3": "^7.4.3",
+    "@types/plotly.js": "^2.35.3",
+    "@types/styled-components": "^5.1.34",
     "@types/zip.js": "^2.0.28",
-    "@visx/axis": "^1.6.1",
-    "@visx/gradient": "^1.6.1",
-    "@visx/grid": "^1.6.1",
-    "@visx/group": "^1.6.1",
-    "@visx/legend": "^1.6.1",
-    "@visx/responsive": "^1.6.1",
-    "@visx/scale": "^1.6.1",
-    "@visx/shape": "^1.6.1",
-    "@visx/zoom": "^1.6.1",
+    "@visx/axis": "^3.12.0",
+    "@visx/gradient": "^3.12.0",
+    "@visx/grid": "^3.12.0",
+    "@visx/group": "^3.12.0",
+    "@visx/legend": "^3.12.0",
+    "@visx/responsive": "^3.12.0",
+    "@visx/scale": "^3.12.0",
+    "@visx/shape": "^3.12.0",
+    "@visx/zoom": "^3.12.0",
     "@zip.js/zip.js": "^2.2.23",
     "chroma-js": "^2.1.0",
     "complex": "^3.0.1",
@@ -55,35 +55,35 @@
     "dxf-parser": "^1.0.0-alpha.2",
     "es-abstract": "^1.24.0",
     "fast-fuzzy": "^1.9.1",
-    "fast-sort": "^2.0.1",
+    "fast-sort": "^3.4.1",
     "file-saver": "^2.0.2",
-    "hotkeys-js": "^3.7.3",
-    "immer": "^9.0.0",
-    "lodash": ">=4.17.19",
+    "hotkeys-js": "^3.13.15",
+    "immer": "^10.1.1",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "object-hash": "^2.0.1",
-    "plotly.js": "^1.52.2",
+    "object-hash": "^3.0.0",
+    "plotly.js": "^2.35.3",
     "react": "^18.3.1",
-    "react-app-polyfill": "^0.2.0",
-    "react-autosuggest": "^9.4.3",
+    "react-app-polyfill": "^3.0.0",
+    "react-autosuggest": "^10.1.0",
     "react-charts": "^2.0.0-beta.6",
     "react-color": "^2.18.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
-    "react-plotly.js": "^2.4.0",
-    "react-select": "^3.0.8",
+    "react-plotly.js": "^2.6.0",
+    "react-select": "^5.10.2",
     "react-splitter-layout": "4.0.0",
-    "react-tabs": "^3.1.0",
-    "react-window": "^1.8.5",
-    "semver": "^7.3.2",
+    "react-tabs": "^6.1.0",
+    "react-window": "^1.8.11",
+    "semver": "^7.6.3",
     "simple-statistics": "^7.1.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^6.1.19",
     "three": "^0.111.0",
     "three-mesh-bvh": "^0.1.5",
     "three.meshline": "^1.3.0",
     "uplot": "^1.0.8",
-    "uuidv4": "6.0.0",
-    "zustand": "^4.5.7"
+    "uuid": "^11.0.3",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
@@ -91,16 +91,16 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-react": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
-    "@types/chroma-js": "^2.0.0",
+    "@types/chroma-js": "^2.4.5",
     "@types/file-saver": "^2.0.1",
-    "@types/lodash": "4.14.149",
-    "@types/mathjs": "^6.0.2",
+    "@types/lodash": "^4.17.21",
+    "@types/mathjs": "^6.0.12",
     "@types/node": "^20.19.25",
-    "@types/object-hash": "^1.3.1",
+    "@types/object-hash": "^1.3.4",
     "@types/react": "^18.3.27",
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "^18.3.7",
-    "@types/react-select": "^4.0.12",
+    "@types/react-select": "^5.0.0",
     "@types/react-splitter-layout": "^4.0.0",
     "@types/recharts": "^1.8.5",
     "@types/semver": "^7.3.1",
@@ -108,37 +108,37 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "^8.4.1",
+    "babel-loader": "^9.2.1",
     "babel-plugin-named-asset-import": "^0.3.0",
-    "babel-preset-react-app": "^7.0.0",
-    "bfj": "6.1.1",
+    "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "chalk": "2.4.1",
+    "chalk": "^4.1.2",
     "css-loader": "^6.11.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "5.6.0",
-    "eslint-config-react-app": "^3.0.6",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^11.0.7",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.5.3",
-    "fs-extra": "7.0.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
+    "fs-extra": "^11.3.2",
     "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^5.6.5",
     "jest": "23.6.0",
     "mini-css-extract-plugin": "^2.9.4",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "^7.3.4",
-    "postcss-preset-env": "6.3.1",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^8.2.0",
+    "postcss-preset-env": "^10.4.0",
+    "postcss-safe-parser": "^7.0.1",
     "process": "^0.11.10",
     "raw-loader": "^4.0.2",
-    "react-is": "^16.8.0",
-    "resolve": "1.8.1",
-    "style-loader": "^3.3.4",
+    "react-is": "^18.3.1",
+    "resolve": "^1.22.11",
+    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.14",
     "typescript": "^5.3.3",
     "url": "^0.11.4",
