--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
+    "test": "node scripts/test.js --passWithNoTests",
     "lint": "tsc --noEmit"
   },
   "dependencies": {
@@ -65,7 +65,6 @@
     "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
     "react-autosuggest": "^10.1.0",
-    "react-charts": "^2.0.0-beta.6",
     "react-color": "^2.18.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
@@ -104,9 +103,8 @@
     "@types/recharts": "^1.8.5",
     "@types/semver": "^7.3.1",
     "@types/three": "^0.181.0",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^30.2.0",
     "babel-loader": "^9.2.1",
     "babel-plugin-named-asset-import": "^0.3.0",
     "babel-preset-react-app": "^10.0.0",
@@ -127,7 +125,8 @@
     "fs-extra": "^11.3.2",
     "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^5.6.5",
-    "jest": "23.6.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "mini-css-extract-plugin": "^2.9.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^8.2.0",
@@ -166,9 +165,11 @@
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
     ],
     "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
+    "testEnvironmentOptions": {
+      "url": "http://localhost"
+    },
     "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.(js|jsx|ts|tsx)$": "babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
