--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "plotly.js": "^2.35.3",
     "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
-    "react-autosuggest": "^10.1.0",
     "react-color": "^2.18.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
@@ -215,12 +214,15 @@
       "@typescript-eslint/no-unused-vars": "off",
       "no-unused-vars": "off",
       "unused-imports/no-unused-imports": "warn",
-      "unused-imports/no-unused-vars": ["warn", {
-        "vars": "all",
-        "varsIgnorePattern": "^_",
-        "args": "after-used",
-        "argsIgnorePattern": "^_"
-      }]
+      "unused-imports/no-unused-vars": [
+        "warn",
+        {
+          "vars": "all",
+          "varsIgnorePattern": "^_",
+          "args": "after-used",
+          "argsIgnorePattern": "^_"
+        }
+      ]
     }
   }
 }
