chore: update react-splitter-layout dependency to react-splitter-layout-react-v18
- Changed dependency from "react-splitter-layout" version 4.0.0 to "react-splitter-layout-react-v18" version ^4.0.3 in package.json.
- Updated import statement in App.tsx to reflect the new package name.
- Removed @types/react-splitter-layout as it is no longer needed.

--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
     "react-select": "^5.10.2",
-    "react-splitter-layout": "4.0.0",
+    "react-splitter-layout-react-v18": "^4.0.3",
     "react-tabs": "^6.1.0",
     "react-window": "^1.8.11",
     "semver": "^7.6.3",
@@ -100,7 +100,6 @@
     "@types/react-color": "^3.0.1",
     "@types/react-dom": "^18.3.7",
     "@types/react-select": "^5.0.0",
-    "@types/react-splitter-layout": "^4.0.0",
     "@types/recharts": "^1.8.5",
     "@types/semver": "^7.3.1",
     "@types/three": "^0.181.0",
