Add comprehensive tests for result, settings, and solver stores
- Implement tests for the result store, covering initial state, result kinds, and various operations (add, update, remove).
- Create tests for the settings store, validating initial settings, staged values, and updates.
- Develop tests for the solver store, including adding/removing solvers, setting properties, and calling methods.
- Introduce benchmarking utilities for performance testing.
- Update tsconfig to exclude test files from compilation.

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,11 @@ src/res/models/semi/semi.blend1
 
 # claude
 .claude/settings.local.json
+
+# Performance baseline (machine-specific)
+.performance-baseline.json
+
+# Playwright
+playwright-report/
+e2e/test-results/
+test-results/
