--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "*.as.ts": "assemblyscript"
-    }
+    },
+    "playwright.reuseBrowser": false,
+    "playwright.showTrace": false
 }
