feat: add ambisonic impulse response functionality to beam tracing and ray tracing
- Added ambisonic impulse response download feature to BeamTraceTab and RayTracerTab components.
- Implemented calculation of ambisonic impulse response in BeamTraceSolver and RayTracer classes.
- Introduced new utility functions for encoding buffers in ambisonic format.
- Updated package.json to include ambisonics library.
- Created type definitions for ambisonics package.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@visx/shape": "^3.12.0",
     "@visx/zoom": "^3.12.0",
     "@zip.js/zip.js": "^2.2.23",
+    "ambisonics": "github:10log/TSAmbisonics",
     "beam-trace": "github:10log/BeamTrace2D#master",
     "chroma-js": "^3.2.0",
     "complex": "^3.0.1",
